--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "17.0.14",
     "@types/redux-logger": "3.0.9",
     "dotenv": "^16.0.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "express": "^4.17.3",
     "firebase": "9.6.6",
     "react": "^17.0.2",
@@ -40,12 +41,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
