--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,10 @@
 {
-  "extends": [
-    "react-app",
-    "react-app/jest",
-    "eslint:recommended",
-    "plugin:react/recommended",
-    "plugin:react-hooks/recommended",
-    "plugin:react/jsx-runtime"
-  ],
+  "extends": ["react-app", "react-app/jest", "plugin:react/jsx-runtime"],
   "rules": {
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "off",
     "react/prop-types": "off",
-    "react/no-array-index-key": "error"
+    "react/no-array-index-key": "error",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "off"
   },
   "settings": {
     "react": {
