--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@types/react-dom": "17.0.14",
     "@types/redux-logger": "3.0.9",
     "dotenv": "^16.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.public/crwn-192x192.png0",
     "express": "^4.17.3",
     "firebase": "9.6.6",
     "react": "^17.0.2",
@@ -34,7 +34,19 @@
     "styled-components": "5.3.3",
     "typed-redux-saga": "1.4.0",
     "typescript": "4.6.2",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
